# PFighter

./: .gitignore  project.godot
addons/godot-rollback-netcode/: SyncManager.gd
assets/char/rook/: char_rook.glb.import  char_rook_Untitled.png.import  rookAttackAirB.glb.import  rookDownBoundAnims.glb.import  rookDownDamageD.glb.import  rookGrabsAndThrows.glb.import
assets/debug/: hemisphere.glb.import
assets/resources/: stage_collision_segment.gd
assets/resources/baseFighterFunctions/: ft_downBoundEnter.gd  ft_enteredNewState.gd  ft_onDamage.gd  ft_processJumpSquat.gd
assets/resources/onLandingFunctions/: damage_fly_landing.gd
assets/stage/: battlefield.glb.import
code/core/: fighter_base.gd  stage_base.gd
engine_cpp/: CMakeLists.txt  README.md
engine_cpp/docs/: architecture.md  native_package_transition_inventory.md
engine_cpp/src/app/: crash_dump.cpp  crash_dump.hpp  headless_main.cpp  package_converter_main.cpp  raylib_main.cpp
engine_cpp/src/core/: action.cpp  action.hpp  animation.cpp  animation.hpp  animation_asset.cpp  animation_asset.hpp  fighter_data.cpp  fighter_data.hpp  fighter_package.cpp  fighter_package.hpp  hsd_action_import.cpp  hsd_action_import.hpp  imported_fighter_asset.hpp  input.hpp  math.cpp  math.hpp  melee_fighter_converter.cpp  melee_fighter_converter.hpp  replay.cpp  replay.hpp  simulation.cpp  simulation.hpp  state_functions.cpp  state_functions.hpp
engine_cpp/src/editor/: fighter_editor.cpp  fighter_editor.hpp
engine_cpp/tools/hsd_exporter/: PFighter.HsdExporter.csproj  Program.cs
scenes/: hitbox.tscn  hurtbox.tscn  main.gd
scenes/stage/: battlefield.tscn  battlefield_simple.tscn
